# Compass-Synthesis-Agent

./: .gitignore  Dockerfile  README.md  render.yaml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: base.py  conflict.py  intake.py  synthesis.py  triage.py
backend/app/agents/domains/: career.py  family.py  finance.py  government.py  health.py  home.py  legal.py
backend/app/api/routes/: compass.py  plans.py  sessions.py
backend/app/db/: schema.sql  supabase.py
backend/app/models/: agent.py  plan.py  problem.py
backend/app/services/: groq_client.py  memory.py  orchestrator.py
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/agents/: AgentCard.tsx  AgentPanel.tsx  AgentPulse.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatThread.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/plan/: ActionPlan.tsx  PlanItem.tsx
frontend/src/hooks/: useCompass.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/store/: compass.ts
